--- a/blog.qmd
+++ b/blog.qmd
@@ -8,6 +8,7 @@ listing:
     sort-ui: true
     filter-ui: true
     page-size: 3
+    fields: [image, date, title, subtitle, description, reading-time]
 page-layout: full
 title-block-banner: true
 ---
